--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,9 @@
     background-color: white;
     box-shadow: 2px 2px 20px gray;
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
     h2 {
         padding: 2rem;
     }
@@ -27,6 +30,11 @@
 
 .active {
     background-color: rgb(226, 226, 226);
+}
+
+.active-library {
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .song-description {
