--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: white;
     box-shadow: 2px 2px 20px gray;
-    overflow: scroll;
+    overflow: auto scroll;
     transform: translateX(-100%);
     transition: all 0.5s ease;
     opacity: 0;
