--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -18,9 +18,12 @@
 .time-control {
     width: 50%;
     display: flex;
-    input {
+    align-items: center;
+    input[type=range] {
         width: 100%;
-        padding: 1rem 0;
+        -webkit-appearance: none;
+        background: transparent;
+        cursor: pointer;
     }
     p {
         padding: 1rem;
@@ -36,4 +39,36 @@
     svg {
         cursor: pointer;
     }
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    // background: black;
+    border-radius: 50%;
+}
+
+.track {
+    background: lightblue;
+    width: 100%;
+    height: 1rem;
+    position: relative;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+.animate-track {
+    background: rgb(204, 204, 204);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(10%);
+    pointer-events: none;
 }
