--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+    .library {
+        width: 100% !important;
+    }
+}
+
 .library {
     position: fixed;
     top: 0;
