--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -19,7 +19,7 @@
     width: 50%;
     display: flex;
     align-items: center;
-    input[type=range] {
+    input[type="range"] {
         width: 100%;
         -webkit-appearance: none;
         background: transparent;
@@ -41,16 +41,20 @@
     }
 }
 
-input[type=range]:focus {
+input[type="range"]:focus {
     outline: none;
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 16px;
     width: 16px;
-    // background: black;
-    border-radius: 50%;
+}
+
+input[type="range"]::-moz-range-thumb {
+    -webkit-appearance: none;
+    background: transparent;
+    border: none;
 }
 
 .track {
